Refactoring textfield, dropdown, masked text field, date dropdown completed

--- a/Common.blocks/BodyText/BodyText.pug
+++ b/Common.blocks/BodyText/BodyText.pug
@@ -1,4 +1,4 @@
 mixin BodyText(content)
-    div.BodyText&attributes(attributes) #{content}
+    p.BodyText&attributes(attributes) #{content}
         if block
             block
