--- a/Common.blocks/DropdownDatepicker/-DateOfDeparture/DropdownDatepicker-DateOfDeparture.scss
+++ b/Common.blocks/DropdownDatepicker/-DateOfDeparture/DropdownDatepicker-DateOfDeparture.scss
@@ -26,6 +26,7 @@
   .DropdownDatepicker-DateOfDeparture {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     appearance: none;
     -webkit-appearance: none;
     box-shadow: none;
@@ -35,12 +36,8 @@
     border-radius: 4px;
     width: 150px;
     height: 44px;
-    padding: 10px 8px 12px 14px;
-    font-family: Montserrat-Regular, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 18px;
+    padding: 12px 8px 12px 14px;
+    @include BodyText;
     letter-spacing: 0;
     background-color: transparent;
     color: $DarkShade75;
