--- a/Common.blocks/DropdownDatepicker/DropdownDatepicker.pug
+++ b/Common.blocks/DropdownDatepicker/DropdownDatepicker.pug
@@ -1,4 +1,4 @@
 mixin DropdownDatepicker(content)
-    form.DropdownDatepicker&attributes(attributes) #{content}
+     div.DropdownDatepicker&attributes(attributes) #{content}
         if block
             block
