--- a/Common.blocks/TitleInsideWidget/TitleInsideWidget.pug
+++ b/Common.blocks/TitleInsideWidget/TitleInsideWidget.pug
@@ -1,4 +1,4 @@
 mixin TitleInsideWidget(content)
-    div.TitleInsideWidget&attributes(attributes) #{content}
+    h2.TitleInsideWidget&attributes(attributes) #{content}
         if block
             block
