--- a/pages/index.scss
+++ b/pages/index.scss
@@ -311,3 +311,22 @@
 @import '../Common.blocks/LabelText/_darkened/LabelText_darkened_25';
 @import '../Common.blocks/ExampleText/-Text/_text/ExampleText-Text_text_wrapping';
 @import '../Common.blocks/ExampleText/_direction/ExampleText_direction_top';
+
+@import '../Common.blocks/Container/-Layout/_size/Container-Layout_size_formElementsLayout';
+@import '../Common.blocks/FormElements/FormElements';
+@import '../Common.blocks/FormElements/-Wrapper/FormElements-Wrapper';
+@import '../Common.blocks/InputField/InputField';
+@import '../Common.blocks/InputField/_active/InputField_active';
+@import '../Common.blocks/FieldOfSignIn/FieldOfSignIn';
+@import '../Common.blocks/FieldOfSignIn/-Header/FieldOfSignIn-Header';
+@import '../Common.blocks/LabelText/_darkened/LabelText_darkened_50';
+@import '../Common.blocks/FormElements/-CorrectiveWrapper/FormElements-CorrectiveWrapper';
+@import '../Common.blocks/FormElementsDescrSt/FormElementsDescrSt';
+@import '../Common.blocks/FormElements/-TxField/FormElements-TxField';
+@import '../Common.blocks/FormElements/-TxField/_indentB/FormElements-TxField_indentB_20px';
+@import '../Common.blocks/FormElements/-TxField/_indentB/FormElements-TxField_indentB_40px';
+@import '../Common.blocks/FormElements/-Datepicker/FormElements-Datepicker';
+@import '../Common.blocks/FormElements/-Dropdown/FormElements-Dropdown';
+@import '../Common.blocks/FormElements/-DropdownGuests/FormElements-DropdownGuests';
+@import '../Common.blocks/FormElements/-TxField/_indentB/FormElements-TxField_indentB_20px';
+@import '../Common.blocks/DropdownDatepicker/-Header/DropdownDatepicker-Header';
