--- a/Common.blocks/Base/Mixins.scss
+++ b/Common.blocks/Base/Mixins.scss
@@ -19,12 +19,31 @@
   }
 }
 
+@mixin InputField {
+  font-family: Montserrat;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  color: $DarkShade25;
+  margin: 0;
+  padding: 13px 14px;
+  outline: none;
+  width: 320px;
+  height: 44px;
+  background: $background;
+  border: 1px solid $DarkShade25;
+  box-sizing: border-box;
+  border-radius: 4px;
+  letter-spacing: -0.2px;
+}
+
 @mixin WidgetTitle {
   font-family: Quicksand, 'Open Sans';
   font-weight: bold;
   font-size: 24px;
   line-height: 30px;
   color: $DarkShade100;
+  margin: 0;
 }
 
 @mixin TitleInsideWidget {
@@ -33,6 +52,7 @@
   font-size: 19px;
   line-height: 24px;
   color: $DarkShade100;
+  margin: 0;
 }
 
 @mixin LabelText {
@@ -42,6 +62,7 @@
   line-height: 15px;
   text-transform: uppercase;
   color: $DarkShade100;
+  margin: 0;
 }
 
 @mixin BodyText {
@@ -50,4 +71,5 @@
   font-size: 14px;
   line-height: 24px;
   color: $DarkShade75;
+  margin: 0;
 }
