--- a/Common.blocks/DropdownDatepicker/-Icon/DropdownDatepicker-Icon.scss
+++ b/Common.blocks/DropdownDatepicker/-Icon/DropdownDatepicker-Icon.scss
@@ -25,6 +25,7 @@
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
   .DropdownDatepicker-Icon {
     color: $DarkShade50;
+    padding-top: 6px;
   }
 }
 
