--- a/Common.blocks/LabelText/LabelText.pug
+++ b/Common.blocks/LabelText/LabelText.pug
@@ -1,4 +1,4 @@
 mixin LabelText(content)
-    div.LabelText&attributes(attributes) #{content}
+    h3.LabelText&attributes(attributes) #{content}
         if block
             block
