--- a/Common.blocks/WidgetTitle/WidgetTitle.pug
+++ b/Common.blocks/WidgetTitle/WidgetTitle.pug
@@ -1,4 +1,4 @@
 mixin WidgetTitle(content)
-    div.WidgetTitle&attributes(attributes) #{content}
+    h1.WidgetTitle&attributes(attributes) #{content}
         if block
             block
