--- a/Common.blocks/DropdownGuests/DropdownGuests.scss
+++ b/Common.blocks/DropdownGuests/DropdownGuests.scss
@@ -57,6 +57,7 @@
     position: relative;
     bottom: 3px;
     color: $DarkShade50;
+    cursor: pointer;
   }
 
   [data-dropdown-guests].ui-multiselect-menu {
