--- a/pages/index.scss
+++ b/pages/index.scss
@@ -330,3 +330,14 @@
 @import '../Common.blocks/FormElements/-DropdownGuests/FormElements-DropdownGuests';
 @import '../Common.blocks/FormElements/-TxField/_indentB/FormElements-TxField_indentB_20px';
 @import '../Common.blocks/DropdownDatepicker/-Header/DropdownDatepicker-Header';
+@import '../Common.blocks/FormElements/-FilterDateDropdown/FormElements-FilterDateDropdown';
+@import '../Common.blocks/InputField/-Arrow/InputField-Arrow';
+@import '../Common.blocks/InputField/-Icon/InputField-Icon';
+@import '../Common.blocks/InputField/_widthFilter/InputField_widthFilter';
+@import '../Common.blocks/SubscrTxField/SubscrTxField';
+@import '../Common.blocks/SubscrTxField/-InputField/SubscrTxField-InputField';
+@import '../Common.blocks/SubscrTxField/-Icon/SubscrTxField-Icon';
+@import '../Common.blocks/FormElSubscrTxField/FormElSubscrTxField';
+
+@import '../Common.blocks/FormElements/-SubscrTxField/FormElements-SubscrTxField';
+@import '../Common.blocks/SubscrTxField/-InputField/_active/SubscrTxField-InputField_active';
