--- a/Common.blocks/InputField/_widthFilter/InputField_widthFilter.scss
+++ b/Common.blocks/InputField/_widthFilter/InputField_widthFilter.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .FilterDateDropdown-Icon {
+  .InputField_widthFilter {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .FilterDateDropdown-Icon {
+  .InputField_widthFilter {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .FilterDateDropdown-Icon {
+  .InputField_widthFilter {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .FilterDateDropdown-Icon {
+  .InputField_widthFilter {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .FilterDateDropdown-Icon {
-    cursor: pointer;
+  .InputField_widthFilter {
+    width: 260px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .FilterDateDropdown-Icon {
+  .InputField_widthFilter {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .FilterDateDropdown-Icon {
+  .InputField_widthFilter {
 
   }
 }
