--- a/Common.blocks/SubscrTxField/-InputField/_active/SubscrTxField-InputField_active.scss
+++ b/Common.blocks/SubscrTxField/-InputField/_active/SubscrTxField-InputField_active.scss
@@ -1,41 +1,42 @@
 @media only screen and (max-width: 576px) {
-  .FilterDateDropdown-Icon {
+  .SubscrTxField-InputField_active {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .FilterDateDropdown-Icon {
+  .SubscrTxField-InputField_active {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .FilterDateDropdown-Icon {
+  .SubscrTxField-InputField_active {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .FilterDateDropdown-Icon {
+  .SubscrTxField-InputField_active {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .FilterDateDropdown-Icon {
-    cursor: pointer;
+  .SubscrTxField-InputField_active {
+    color: $DarkShade75;
+    border-color: $DarkShade50;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .FilterDateDropdown-Icon {
+  .SubscrTxField-InputField_active {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .FilterDateDropdown-Icon {
+  .SubscrTxField-InputField_active {
 
   }
 }
