--- a/Common.blocks/FormElements/-DropdownFacilities/FormElements-DropdownFacilities.scss
+++ b/Common.blocks/FormElements/-DropdownFacilities/FormElements-DropdownFacilities.scss
@@ -1,42 +1,42 @@
 @media only screen and (max-width: 576px) {
- .Wrapper-GuestsDropdown {
+  .FormElements-DropdownFacilities {
 
-}
+  }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
- .Wrapper-GuestsDropdown {
+  .FormElements-DropdownFacilities {
 
- }
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
- .Wrapper-GuestsDropdown {
+  .FormElements-DropdownFacilities {
 
- }
+  }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
- .Wrapper-GuestsDropdown {
+  .FormElements-DropdownFacilities {
 
- }
+  }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
- .Wrapper-GuestsDropdown {
-	padding-bottom: 17px;
- }
+  .FormElements-DropdownFacilities {
+    margin-bottom: 20px;
+  }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
- .Wrapper-GuestsDropdown {
+  .FormElements-DropdownFacilities {
 
- }
+  }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
- .Wrapper-GuestsDropdown {
+  .FormElements-DropdownFacilities {
 
- }
+  }
 }
 
