Fixed styles for dropDown facilities

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -321,13 +321,13 @@ html
                             +SubscrTxField.FormElSubscrTxField
                                 +SubscrTxField-InputField(type='text' placeholder='Email')
                                 +SubscrTxField-Icon('arrow_forward')
-                        +FieldOfSignIn.FormElements-DropdownFacilities
-                            +FieldOfSignIn-Header(class='InputBlock_width_265px')
+                        +FieldOfSignIn.FieldOfSignIn_widthFacilities.FormElements-DropdownFacilities
+                            +FieldOfSignIn-Header
                                 +LabelText dropdown
                                 +LabelText.LabelText_darkened_50.LabelText_text_regular default
                             +DropdownFacilities(multiple='multiple', id="dropdownFacilities", name='dropdownFacilities', size='3' data-option-value=['bedrooms', 'beds', 'bathrooms'] data-option-content=['спальни', 'кровати', 'ванные комнаты'] data-option-declension=[['спален', 'спальня', 'спальни'],['кроватей', 'кровать', 'кровати'],['ванных комнат', 'ванная комната', 'ванные комнаты']])
-                        +FieldOfSignIn.FormElements-DropdownFacilities_expanded
-                            +FieldOfSignIn-Header(class='InputBlock_width_265px')
+                        +FieldOfSignIn.FieldOfSignIn_widthFacilities.FormElements-Dropdow_expanded
+                            +FieldOfSignIn-Header
                                 +LabelText dropdown
                                 +LabelText.LabelText_darkened_50.LabelText_text_regular expanded
                             +DropdownFacilities(multiple='multiple', id="dropdownFacilitiesExpanded", name='dropdownFacilities', size='3' data-option-value=['bedrooms', 'beds', 'bathrooms'] data-option-content=['спальни', 'кровати', 'ванные комнаты'] data-option-declension=[['спален', 'спальня', 'спальни'], ['кроватей', 'кровать', 'кровати'], ['ванных комнат', 'ванная комната', 'ванные комнаты']])
