--- a/pages/index.scss
+++ b/pages/index.scss
@@ -326,3 +326,5 @@
 
 @import '../Common.blocks/FormElements/-DropdownFacilities/FormElements-DropdownFacilities';
 @import '../Common.blocks/FormElements/-DropdownFacilities/_expanded/FormElements-DropdownFacilities_expanded';
+
+@import '../Common.blocks/FieldOfSignIn/_widthFacilities/FieldOfSignIn_widthFacilities';
